[build-system]
requires = ["setuptools>=58.0.4", "wheel>=0.37.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mjclone"
version = "0.1.0"
description = ""
requires-python = ">=3.11"
authors = [{name="Mark Mayerfeld", email = "nosanmark@gmail.com"}]
license = {file="LICENSE"}
readme = "README.md"
dependencies=[
    "torch~=2.0",
    "transformers",
    "opencv-contrib-python",
    "flash-attn",
    "diffusers",
    "safetensors",
    "sentencepiece",
    "accelerate",
    "bitsandbytes",
    "clip-interrogator==0.6.0",
    "kandinsky2 @ git+https://github.com/markmno/Kandinsky-2.git",
    "clip @ git+https://github.com/openai/CLIP.git"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
]

[project.urls]
repository = "https://github.com/markmno/testovoe" 

[tool.setuptools]
packages = ["mjclone"]